@@ -161,7 +161,7 @@ public class ClientObjectProxy<T> extends ClientJms implements JmsObjectProxy {
 								res.getStringProperty(PROP_EXCEPION_CLASS) + "." + 
 								res.getStringProperty(PROP_EXCEPTION_METHOD) + "]" );
 					} catch (Throwable t) {
-						exception = (Throwable) exceptionClass.newInstance();
+						exception = (Throwable) exceptionClass.getDeclaredConstructor().newInstance();
 					}
 					throw exception;
 				}
